--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>7 days of code - Landing Page</title>
 
-	<link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
 		<div class="logo">
-			<img src="assets/icon.png"/>
+			<img src="./assets/icon.png"/>
 			<p>OptimusTech</p>
 		</div>
 		
@@ -64,7 +64,7 @@
 			<h2>Estamos procurando por talentos</h2>
 			<p class="item__talentos--p">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
 
-			<img src="/assets/equipe.png" alt="Imagem de uma equipe em escritório">
+			<img src="./assets/equipe.png" alt="Imagem de uma equipe em escritório">
 		</section>
 
 		<section class="container__vagas-abertas">
@@ -103,7 +103,7 @@
 
 			<h2 class="depoimentos__titulo">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
 
-			<img src="/assets/avatar.png" alt="Avatar">
+			<img src="./assets/avatar.png" alt="Avatar">
 
 			<p class="depoimentos__nome">Júlia Castro</p>
 			<p class="depoimentos__cargo">Desenvolvedora Web</p>
