--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>7 days of code - Landing Page</title>
 
 	<link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 	<header>
@@ -14,20 +14,20 @@
 			<img src="./assets/icon.png"/>
 			<p>OptimusTech</p>
 		</div>
-		
+
 		<nav>
 			<div class="links">
-			  <a href="#">Home</a>
-			  <a href="#">Produtos</a>
-			  <a href="#">Recursos</a>
-			  <a href="#">Sobre nós</a>
+				<a href="#">Home</a>
+				<a href="#">Produtos</a>
+				<a href="#">Recursos</a>
+				<a href="#">Sobre nós</a>
 			</div>
 
 			<div class="buttons">
-			  <button>Entrar</button>
-			  <button id="signUp">Cadastrar</button>
+				<button>Entrar</button>
+				<button id="signUp">Cadastrar</button>
 			</div>
-		  </nav>
+			</nav>
 	</header>
 	<main>
 		<section class="container__sobre-nos">
